--- a/test.html
+++ b/test.html
@@ -6,7 +6,6 @@
     </head>
     <h1>Books I have read</h1>
     <p>This is a book review page</p>
-    <p> ,<img src="Books.jpg"/></p>
+    <p> ,<img src="images/Books.jpg"/></p>
     </body>
 </html>
-
