icon added to the tab

--- a/test.html
+++ b/test.html
@@ -2,8 +2,9 @@
 <html></html>
 <head>
     <title>Book Reviews</title>
-    <body>
-    </head>
+    <link rel="icon" type="image/png" href="/icons/bookie.png">
+</head>
+    </body>
     <h1>Books I have read</h1>
     <p>This is a book review page</p>
     <p> ,<img src="images/Books.jpg"/></p>
