--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
     <title>Book Reviews</title>
     <link rel="icon" type="image/png" href="/icons/bookie.png">
 </head>
-</body>
+<body>
     <h1>Books I have read</h1>
     <p>This is a book review page</p>
     <p> ,<img src="images/Books.jpg"/></p>
