--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <html></html>
 <head>
     <title>Book Reviews</title>
-    <link rel="icon" type="image/png" href="/icons/bookie.png">
+    <link rel="icon" type="image/png" href="icons/bookie.png"/>
 </head>
 <body>
     <h1>Books I have read</h1>
