--- a/test.html
+++ b/test.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html></html>
+<html>
 <head>
     <title>Book Reviews</title>
-    <link rel="icon" type="image/png" href="icons/bookie.png"/>
+    <link rel="icon" href="icons/bookie.png"/>
 </head>
 <body>
     <h1>Books I have read</h1>
